--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'">
+    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'">
     <title>Hello World!</title>
     <link rel="stylesheet" href="./style.css">
   </head>
@@ -12,11 +12,16 @@
     <header>
       <span class='icon-totot'>💃</span><span id='clock'></span>
     </header>
-    <nav>
-      <a href="javascript:void(0)">计算器</a>
-    </nav>
     <div id='main-div'>
-
+      <nav id='aside'>
+        <a href="#calculator">计算器</a>
+      </nav>
+      <div id='container'>
+        <div id='calculator' class="inactive">
+          <input type="text" name="stdin" value="">
+          <div id='results'></div>
+        </div>
+      </div>
     </div>
 
     <!-- You can also require other files to run in this process -->
